# vamp

./: .gitignore  AGENTS.md  INSTALLATION.md  README.md  TODO  compose.yaml  configure_nat_node.sh  index.html  package.json  test_net_env  tsconfig.json  tsconfig.node.json  tsconfig.server.json  vite.bundle.config.ts  vite.config.ts  vite.thin.config.ts
pictures/: dbCom1
signalling-server/: Cargo.toml  README.md
signalling-server/src/: main.rs  wsclient.rs  wsserver.rs
src/: App.css  App.tsx  PlayerControls.tsx  YoutubePlayer.tsx  YoutubeWait.tsx  index.css  logger.ts  store.ts  useListenTracker.ts  youtubeApi.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_unique_track.sql  0003_listened.sql  0004_listened_daily.sql  0005_removed_tracks.sql
src-tauri/src/: ice_con.rs  main.rs
src-tauri/src/commands/: dispatch.rs  listen_guard.rs  mod.rs
src-tauri/src/db/: filtered_schema.rs  mod.rs  repository.rs  schema.rs  specta_export.rs  sqlite.rs  testdb.rs
src-tauri/src/transport/: ws_server.rs
src/common/: utils.ts
src/db/: LibraryWidget.tsx  dispatchClient.ts  generatedTypes.ts  tauriDb.ts  tauriInvoke.ts
src/db/data/: TrackItem.tsx  TrackList.css  TrackList.tsx  TrackListContextMenu.tsx
src/db/filter/: CriteriaBrowser.tsx  CriteriaInput.tsx  CriteriaPills.tsx  NumberSelector.tsx  SearchWidget.tsx  TagSelector.tsx  filter.css  types.ts
src/db/track/: TrackInfo.css  TrackInfo.tsx  TrackItem.tsx
src/players/: SCPlayer.tsx  playingContext.tsx
src/playlist/: PlaylistView.tsx  PlaylistsTab.tsx  playlist.css
src/test/dbTest/: mockPage.html  testDb.tsx  testDb.unit.test.tsx  testMain.tsx  testTrackGet.ts
src/test/dbTest/helpers/: seed.ts
src/transport/: WSClient.ts  sserver.ts
src/transport/experiments/: eApp.tsx  main.tsx  pocWsServer.ts  thinPage.html  types.ts
src/ui/: PendingTasksWidget.tsx  deleteContext.ts  elements.tsx  playContext.tsx  styles.css
