[package]
name = "signalling-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "signalling-server"
path = "src/main.rs"

[dependencies]
tokio             = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
tokio-rustls      = "0.26"
rustls            = "0.23"
webpki-roots      = "0.26"
rustls-pemfile    = "2"
futures-util      = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
webrtc            = "0.11"
webrtc-sdp        = "0.3"


[profile.release]
opt-level = 3
lto = true
strip = true
