[package]
name = "vampagent"
version = "0.1.0"
description = "VampAgent YouTube Viewer"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webkit2gtk = { version = "2", features = ["v2_40"] }
