[package]
name = "vampagent"
version = "0.1.0"
description = "VampAgent YouTube Viewer"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webkit2gtk = { version = "2", features = ["v2_40"] }
sqlx        = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
async-trait = "0.1"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"

[dev-dependencies]
webrtc = "0.11"
anyhow = "1"
log    = "0.4"
